weight-tracker_app_deployment/fronted-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: weight-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: lesiiu/weight-tracker-frontend:1.0.1
        ports:
        - containerPort: 80
