weight-tracker_app_deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weigh-tracker-backend-service
  namespace: weight-tracker
spec:
  selector:
    app: weigh-tracker-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  # type: ClusterIP
