weight-tracker_app_deployment/fronted-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: weight-tracker
spec:
  selector:
    app: react-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP



# apiVersion: v1
# kind: Service
# metadata:
#   name: react-frontend
# spec:
#   selector:
#     app: react-frontend
#   ports:
#     - protocol: TCP
#       port: 80  # Exposes port 80 to external clients
#       targetPort: 80
#   type: LoadBalancer  # External access to the frontend
