weight-tracker_app_deployment/frontend-react-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: react-frontend-ingress
  namespace: weight-tracker
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`react.local.io`)
      services:
        - name: react-frontend-service
          port: 80
      middlewares:
        - name: redirect-https-frontend
  tls:
    secretName: react-tls-cert-k3s
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: react-frontend-ingress-http
  namespace: weight-tracker
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`react.local.io`)
      middlewares:
        - name: redirect-https-frontend
      services:
        - name: react-frontend-service
          port: 80
---
# Middleware to redirect HTTP to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-frontend
  namespace: weight-tracker
spec:
  redirectScheme:
    scheme: https
    permanent: true
